fix: display likes and comments on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -441,7 +441,7 @@ textarea {
     }
 
     .button .short-label {
-        display: block;
+        display: block !important;
     }
 
     .author-name {
